--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+ .footer {
+   clear:both;
+   text-align: center;
+   width: 100%;
+   height: 20px;
+ }
