--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,5 @@
 <div class="text-center">
   <h1><%= @question.body %></h1>
+  <%= link_to 'Назад', test_path(@question.test) %>
   <%= link_to 'Удалить вопрос', question_path(@question),method: :delete, data: { confirm: 'Вы уверены?' } %>
 </div>
