--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,15 +1,14 @@
-<table class="table table-bordered text-center">
-  <thead>
-    <tr>
-      <th scope="col">Номер</th>
-      <th scope="col">Тест</th>
-    </tr>
-  </thead>
-    <tbody>
-      <% @tests.each do |test| %>
-          <td><%= test.id %></td>
-          <td><%= test.title %></td>
-        </tr>
-      <% end %>
-  </tbody>
+<h2>Список тестов</h2>
+
+<%= link_to 'Создать тест', new_test_path %>
+
+<table>
+  <tr>
+    <th>Название</th>
+    <th>Уровень</th>
+    <th>Количество вопросов</th>
+    <th colspan="3">Действия</th>
+  </tr>
+
+  <%= render @tests %>
 </table>
