--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,15 @@
 <div class="text-center">
   <h1><%= @question.body %></h1>
-  <%= link_to 'Назад', test_path(@question.test) %>
+
+  <h2>Ответы</h2>
+
+  <%= link_to 'Новый ответ', new_question_answer_path(@question) %>
+
+  <ol>
+    <%= render @question.answers %>
+  </ol>
+
+  <%= link_to 'Редактировать', edit_question_path(@question) %> |
+  <%= link_to 'Назад', test_path(@question) %> |
   <%= link_to 'Удалить вопрос', question_path(@question),method: :delete, data: { confirm: 'Вы уверены?' } %>
 </div>
