--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <h3><%= link_to 'Test Guru', root_path %></h3>
+    <% if logged_in? %>
+      <p class="nav user">
+        Welcome, <b><%= current_user.name %> </b>Guru |
+        <%= link_to 'Выход', logout_path, data: { method: :delete } %>
+      </p>
+    <% else %>
+      <p class="nav user">
+        <%= link_to 'Регистрация', signup_path %> |
+        <%= link_to 'Вход', login_path %>
+      </p>
+    <% end %>
+  <body>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
