--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,10 +1,13 @@
 <h2>Список тестов</h2>
 
+<%= link_to 'Создать тест', new_admin_test_path %>
+
 <table>
   <tr>
     <th>Название</th>
     <th>Уровень</th>
     <th>Количество вопросов</th>
+    <th colspan="3">Действия</th>
   </tr>
 
   <%= render @tests %>
