--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,19 @@
 
   <body>
     <h3><%= link_to 'Test Guru', root_path %></h3>
-    <% if logged_in? %>
+    <% if user_signed_in? %>
       <p class="nav user">
-        Welcome, <b><%= current_user.name %> </b>Guru |
-        <%= link_to 'Выход', logout_path, data: { method: :delete } %>
+        Welcome, <b><%= current_user.first_name %> </b>Guru |
+        <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
       </p>
     <% else %>
       <p class="nav user">
-        <%= link_to 'Регистрация', signup_path %> |
-        <%= link_to 'Вход', login_path %>
+        <%= link_to 'Войти', new_user_session_path %>
+        <%= link_to 'Зарегистрироваться', new_user_registration_path %>
       </p>
     <% end %>
-  <body>
+
+    <%= render 'shared/flash' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
