--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,13 @@
     <h3><%= link_to 'Test Guru', root_path %></h3>
     <% if user_signed_in? %>
       <p class="nav user">
-        Welcome, <b><%= current_user.first_name %> </b>Guru |
-        <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
+        <%= t('.welcome', user_name: current_user.first_name) %> |
+        <%= link_to t('.log_out'), destroy_user_session_path, data: { method: :delete } %>
       </p>
     <% else %>
       <p class="nav user">
-        <%= link_to 'Войти', new_user_session_path %>
-        <%= link_to 'Зарегистрироваться', new_user_registration_path %>
+        <%= link_to t('.sign_up'), user_session_path %> |
+        <%= link_to t('.log_in'), new_user_session_path %>
       </p>
     <% end %>
 
