--- a/app/views/admin/tests/edit.html.erb
+++ b/app/views/admin/tests/edit.html.erb
@@ -1,4 +1,4 @@
 <h1> Редактировать <%= @test.title %></h1>
 
 <%= render 'form' %>
-<%= link_to 'Назад', admin_tests_path %>
+<%= link_to t('.back'), admin_tests_path %>
