--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,13 +1,13 @@
-<h2>Список тестов</h2>
+<h2><%= t('.header') %></h2>
 
-<%= link_to 'Создать тест', new_admin_test_path %>
+<%= link_to t('.new_test'), new_admin_test_path %>
 
 <table>
   <tr>
-    <th>Название</th>
-    <th>Уровень</th>
-    <th>Количество вопросов</th>
-    <th colspan="3">Действия</th>
+    <th><%= t('.title') %></th>
+    <th><%= t('.level') %></th>
+    <th><%= t('.questions') %></th>
+    <th colspan="3"><%= t('.actions') %></th>
   </tr>
 
   <%= render @tests %>
