--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,27 +1,27 @@
 <p>
- <strong>Название:</strong>
+ <strong><%= t('.title', title: @test.title) %></strong>
  <%=	@test.title %>
 </p>
 
 <p>
- <strong>Уровень:</strong>
+ <strong><%= t('.level', level: test_level(@test)) %></strong>
  <%=	@test.level %>
 </p>
 
 <p>
- <h3>Список вопросов</h3>
+ <h3><%= t('.questions') %></h3>
 </p>
 
  <table>
    <tr>
-     <th>Название</th>
-     <th colspan="3">Действия</th>
+     <th><%= t('.title') %></th>
+     <th colspan="3"><%= t('.actions') %></th>
    </tr>
 
    <%= render @test.questions %>
  </table>
 </p>
 
-<%= link_to 'Создать вопрос', new_admin_test_question_path(@test.id) %> |
-<%= link_to 'Редактировать', edit_admin_test_path(@test) %> |
-<%= link_to 'Назад', admin_tests_path %>
+<%= link_to t('.new_test'), new_admin_test_question_path(@test.id) %> |
+<%= link_to t('.edit'), edit_admin_test_path(@test) %> |
+<%= link_to t('.back'), admin_tests_path %>
