--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,11 +1,9 @@
 <p>
  <strong><%= t('.title', title: @test.title) %></strong>
- <%=	@test.title %>
 </p>
 
 <p>
- <strong><%= t('.level', level: test_level(@test)) %></strong>
- <%=	@test.level %>
+ <strong><%= t('.level', level: @test.level) %></strong>
 </p>
 
 <p>
