--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,8 +1,8 @@
-<div class="nav nav-admin">
-  <span class="nav-admin title"><%= t('.header') %></span>
+<nav class="navbar navbar-dark bg-dark">
+<%= link_to 'TestGuru', root_path, class: 'navbar-brand', style: 'color: dark' %>
 
-  <div class="nav-admin user">
-    <%= t('.welcome') %>, <b class="nav-admin user-email"><%= current_user.email %></b> <%= t('.guru') %> |
-    <%= link_to t('.logout'), destroy_user_session_path, method: :delete %>
-  </div>
-</div>
+  <span class="navbar-text">
+    <%= t('.header') %>, Администратор: <%= current_user.first_name %> |
+    <%= link_to t('.logout'), destroy_user_session_path, method: :delete, class: "badge badge-info" %>
+  </span>
+</nav>
