--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>TestGuru</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,21 +13,12 @@
   </head>
 
   <body>
-    <h3><%= link_to 'Test Guru', root_path %></h3>
-    <% if user_signed_in? %>
-      <p class="nav user">
-        <%= t('.welcome', user_name: current_user.first_name) %> |
-        <%= link_to t('.log_out'), destroy_user_session_path, data: { method: :delete } %>
-      </p>
-    <% else %>
-      <p class="nav user">
-        <%= link_to t('.sign_up'), user_session_path %> |
-        <%= link_to t('.log_in'), new_user_session_path %>
-      </p>
-    <% end %>
+    <%= render 'shared/nav' %>
 
-    <%= render 'shared/flash' %>
-    <%= yield %>
-    <%= render 'layouts/footer' %>
+    <div class="container">
+      <%= render 'shared/flash' %>
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
