--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,10 +1,14 @@
 <h2><%= t('tests.index.header') %></h2>
 
-<table class="table table-striped">
-  <tr class="table-primary">
-    <th scope='col'><%= t('.title') %></th>
-    <th scope='col'><%= t('.level') %></th>
-    <th scope='col'><%= t('.questions') %></th>
+<table class="table">
+  <tr>
+    <th class="sort-by-title pointer">
+      <%= t('.title') %>
+      <%= octicon 'arrow-up', class: 'text-success hide' %>
+      <%= octicon 'arrow-down', class: 'text-success hide' %>
+    </th>
+    <th><%= t('.level') %></th>
+    <th><%= t('.questions') %></th>
   </tr>
 
   <%= render @tests %>
