--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -2,9 +2,13 @@
 
 <%= link_to t('.new_test'), new_admin_test_path, class: 'badge badge-success' %>
 
-<table class="table table-striped table-dark">
+<table class="table">
   <tr>
-    <th><%= t('.title') %></th>
+    <th class="sort-by-title pointer">
+      <%= t('.title') %>
+      <%= octicon 'arrow-up', class: 'text-success hide' %>
+      <%= octicon 'arrow-down', class: 'text-success hide' %>
+    </th>
     <th><%= t('.level') %></th>
     <th><%= t('.questions') %></th>
     <th colspan="3"><%= t('.actions') %></th>
