edit registration path

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -7,7 +7,7 @@
       <%= link_to t('.admin_panel'), admin_tests_path if current_user.admin? %> |
       <%= link_to t('.log_out'), destroy_user_session_path, data: { method: :delete } %>
     <% else %>
-      <%= link_to t('.sign_up'), user_session_path %> |
+      <%= link_to t('.sign_up'), new_user_registration_path %> |
       <%= link_to t('.log_in'), new_user_session_path %>
   <% end %>
   </span>
