--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,6 +1,7 @@
 .footer {
-  clear:both;
-  text-align: center;
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 20px;
+  height: 40px;
+  margin-left: 300px;
 }
