--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="container">
       <%= render 'shared/flash' %>
       <%= yield %>
-      <%= render 'layouts/footer' %>
+      <%= render 'shared/footer' %>
     </div>
   </body>
 </html>
