fix bag admin layout

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,6 +13,6 @@
     <%= render 'admin/nav' %>
     <%= render 'shared/flash' %>
     <%= yield %>
-    <%= render 'layouts/footer' %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
