--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -12,7 +12,7 @@
 
  <table>
    <tr>
-     <th><%= t('.title') %></th>
+     <th><%= @test.title %></th>
      <th colspan="3"><%= t('.actions') %></th>
    </tr>
 
