--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-dark bg-dark">
 <%= link_to 'TestGuru', root_path, class: 'navbar-brand', style: 'color: dark' %>
+<%= link_to 'ADMIN PANEL', admin_tests_path if current_user.admin? %>
 
   <span class="navbar-text">
+    <%= link_to 'Все бэйджи', admin_badges_path, class: "badge badge-info" %> |
     <%= t('.header') %>, Администратор: <%= current_user.first_name %> |
     <%= link_to t('.logout'), destroy_user_session_path, method: :delete, class: "badge badge-info" %>
   </span>
