--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -5,6 +5,8 @@
   </td>
   <td class='align-middle'><%= test.level %></td>
   <td class='align-middle'><%= test.questions.size %></td>
+  <td class='align-middle'><%= test.category.title %> id:<%= test.category.id %></td>
+  <td class='align-middle'><%= test.id %></td>
   <td class='align-middle'><%= link_to t('.show'), admin_test_path(test) %></td>
   <td class='align-middle'>
     <%= link_to t('.edit'), edit_admin_test_path(test), data: { test_id: test.id }, class: 'form-inline-link' %>
