--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,6 +4,7 @@
   <span class="navbar-text">
     <%= link_to t('.feedback'), new_contact_path %> |
     <% if user_signed_in? %>
+      <%= link_to 'Мои бэйджи', badges_path %> |
       <%= t('.welcome', user: current_user.first_name) %>|
       <%= link_to t('.admin_panel'), admin_tests_path if current_user.admin? %> |
       <%= link_to t('.log_out'), destroy_user_session_path, data: { method: :delete } %>
