--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -9,6 +9,7 @@
     </th>
     <th><%= t('.level') %></th>
     <th><%= t('.questions') %></th>
+    <th><%= t('.status') %></th>
   </tr>
 
   <%= render @tests %>
